--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -32,3 +32,70 @@ $primary: $green;
 //   color: var(--text-color) !important;
 //   --nav-bar-color: $gray;
 // }
+.app {
+  position: relative !important;
+}
+.main {
+  position: relative !important;
+  margin-top: 60px !important;
+}
+.sidebar {
+  height: 100%; /* Full-height: remove this if you want "auto" height */
+  position: fixed !important; /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 2; /* Stay on top */
+  top: 60px; /* Stay at the top */
+  left: 0;
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 20px;
+}
+
+.navbar {
+  height: 60px;
+  width: 100%;
+  position: fixed !important;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
+  z-index: 999;
+}
+
+[data-component=sidebar] .first-menu {
+  // position: fixed;
+  // height: 100vw;
+  width: 80px;
+  padding-inline: 0 !important;
+  margin-inline: auto;
+  // top: 60px;
+  // overflow: hidden;
+  transition: width 0.5s;
+}
+
+[data-component=sidebar] .first-menu span {
+  font-size: 14px;
+  // white-space: nowrap;
+  font-family: "Open Sans", sans-serif;
+  opacity: 0;
+  visibility: hidden;
+  display: inline-block;
+  width: 0px;
+  transition: width 0.5s;
+}
+[data-component=sidebar] .first-menu li:hover {
+  background-color: tint-color(gray, 40%) !important;
+  color: tint-color(black, 20%);
+}
+[data-component=sidebar] .first-menu a span {
+  text-align: left;
+}
+[data-component=sidebar] .first-menu li {
+  color: tint-color(black, 40%);
+  text-align: center;
+}
+[data-component=sidebar] .first-menu:hover span {
+  opacity: 1;
+  visibility: visible;
+  width: 90px;
+}
+[data-component=sidebar] .first-menu:hover {
+  width: 180px;
+}
