--- a/src/style/_signUp.scss
+++ b/src/style/_signUp.scss
@@ -1,53 +1,45 @@
 @import url("https://fonts.googleapis.com/css?family=Nunito:400,600,700");
 
-[data-component=sign-up]{
+[data-component=user-connection]{
 * {
   box-sizing: border-box;
 }
 
-// body {
-//   font-family: "Nunito", sans-serif;
-//   color: rgba(#000, 0.7);
-// }
-
-.container {
-  height: 200vh;
-  background-image: url(https://images.unsplash.com/photo-1538137524007-21e48fa42f3f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=ac9fa0975bd2ebad7afd906c5a3a15ab&auto=format&fit=crop&w=1834&q=80);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+button {
+    border-style: none;
+    background-color: transparent;
+    color: var(--bs-info-text-emphasis);
 }
-
 .modal {
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 0;
-  background: rgba(#333, 0.5);
+  background: var(--bs-secondary-color);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  transition: 0.4s;
+  overflow: hidden;
+  height: 100%;
 
   &-container {
     display: flex;
     max-width: 720px;
+    min-height: 520px;
     width: 100%;
     border-radius: 10px;
     overflow: hidden;
     position: absolute;
-    opacity: 0;
-    pointer-events: none;
-    transition-duration: 0.3s;
-    background: #fff;
-    transform: translateY(100px) scale(0.4);
+    background: var(--bs-body-bg);
+    opacity: 1;
+    pointer-events: auto;
   }
 
   &-title {
     font-size: 26px;
     margin: 0;
+    padding-top: 20px;
     font-weight: 400;
     color: #55311c;
   }
@@ -57,12 +49,17 @@
   }
 
   &-left {
-    padding: 60px 30px 20px;
-    background: #fff;
+    padding-inline: 30px;
+    background: var(--bs-body-bg);
     flex: 1.5;
-    transition-duration: 0.5s;
-    transform: translateY(80px);
-    opacity: 0;
+    min-height: 520px;
+    min-height: 100%;
+    display: flex;
+    align-self: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
   }
 
   &-button {
@@ -93,114 +90,27 @@
     img {
       width: 100%;
       height: 100%;
-      transform: scale(2);
-      object-fit: cover;
-      transition-duration: 1.2s;
-    }
-  }
-
-  &.is-open {
-    height: 100%;
-    background: rgba(#333, 0.85);
-
-    .modal-button {
-      opacity: 0;
-    }
-
-    .modal-container {
-      opacity: 1;
-      transition-duration: 0.6s;
-      pointer-events: auto;
-      transform: translateY(0) scale(1);
-    }
-
-    .modal-right img {
       transform: scale(1);
-    }
-
-    .modal-left {
-      transform: translateY(0);
-      opacity: 1;
-      transition-delay: 0.1s;
+      object-fit: cover;
     }
   }
+  
 
   &-buttons {
+    margin-top: 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-
-    a {
-      color: rgba(#333, 0.6);
-      font-size: 14px;
-    }
   }
 }
 
-.sign-up {
+.user-connection {
   margin: 60px 0 0;
   font-size: 14px;
   text-align: center;
 
   a {
     color: #8c7569;
-  }
-}
-
-.input-button {
-  padding: 8px 12px;
-  outline: none;
-  border: 0;
-  color: #fff;
-  border-radius: 4px;
-  background: #8c7569;
-  font-family: "Nunito", sans-serif;
-  transition: 0.3s;
-  cursor: pointer;
-
-  &:hover {
-    background: #55311c;
-  }
-}
-
-.input-label {
-  font-size: 11px;
-  text-transform: uppercase;
-  font-family: "Nunito", sans-serif;
-  font-weight: 600;
-  letter-spacing: 0.7px;
-  color: #8c7569;
-  transition: 0.3s;
-}
-
-.input-block {
-  display: flex;
-  flex-direction: column;
-  padding: 10px 10px 8px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  margin-bottom: 20px;
-  transition: 0.3s;
-
-  input {
-    outline: 0;
-    border: 0;
-    padding: 4px 0 0;
-    font-size: 14px;
-    font-family: "Nunito", sans-serif;
-
-    &::placeholder {
-      color: #ccc;
-      opacity: 1;
-    }
-  }
-
-  &:focus-within {
-    border-color: #8c7569;
-
-    .input-label {
-      color: rgba(#8c7569, 0.8);
-    }
   }
 }
 
@@ -217,24 +127,6 @@
   cursor: pointer;
 }
 
-.scroll-down {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  color: darken(#8c7569, 5%);
-  font-size: 32px;
-  font-weight: 800;
-  transform: translate(-50%, -50%);
-  svg {
-    margin-top: 16px;
-    width: 52px;
-    fill: currentColor;
-  }
-}
 
 
 @media(max-width: 750px) {
