--- a/src/style/style.css
+++ b/src/style/style.css
@@ -11917,60 +11917,63 @@ textarea.form-control-lg {
   width: 180px;
 }
 
-[data-component=sign-up] * {
+[data-component=user-connection] * {
   box-sizing: border-box;
 }
-[data-component=sign-up] .container {
-  height: 200vh;
-  background-image: url(https://images.unsplash.com/photo-1538137524007-21e48fa42f3f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=ac9fa0975bd2ebad7afd906c5a3a15ab&auto=format&fit=crop&w=1834&q=80);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+[data-component=user-connection] button {
+  border-style: none;
+  background-color: transparent;
+  color: var(--bs-info-text-emphasis);
 }
-[data-component=sign-up] .modal {
+[data-component=user-connection] .modal {
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 0;
-  background: rgba(51, 51, 51, 0.5);
+  background: var(--bs-secondary-color);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  transition: 0.4s;
+  overflow: hidden;
+  height: 100%;
 }
-[data-component=sign-up] .modal-container {
+[data-component=user-connection] .modal-container {
   display: flex;
   max-width: 720px;
+  min-height: 520px;
   width: 100%;
   border-radius: 10px;
   overflow: hidden;
   position: absolute;
-  opacity: 0;
-  pointer-events: none;
-  transition-duration: 0.3s;
-  background: #fff;
-  transform: translateY(100px) scale(0.4);
+  background: var(--bs-body-bg);
+  opacity: 1;
+  pointer-events: auto;
 }
-[data-component=sign-up] .modal-title {
+[data-component=user-connection] .modal-title {
   font-size: 26px;
   margin: 0;
+  padding-top: 20px;
   font-weight: 400;
   color: #55311c;
 }
-[data-component=sign-up] .modal-desc {
+[data-component=user-connection] .modal-desc {
   margin: 6px 0 30px 0;
 }
-[data-component=sign-up] .modal-left {
-  padding: 60px 30px 20px;
-  background: #fff;
+[data-component=user-connection] .modal-left {
+  padding-inline: 30px;
+  background: var(--bs-body-bg);
   flex: 1.5;
-  transition-duration: 0.5s;
-  transform: translateY(80px);
-  opacity: 0;
+  min-height: 520px;
+  min-height: 100%;
+  display: flex;
+  align-self: center;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
-[data-component=sign-up] .modal-button {
+[data-component=user-connection] .modal-button {
   color: #7d695e;
   font-family: "Nunito", sans-serif;
   font-size: 18px;
@@ -11983,111 +11986,37 @@ textarea.form-control-lg {
   box-shadow: 0 10px 40px rgba(0, 0, 0, 0.16);
   transition: 0.3s;
 }
-[data-component=sign-up] .modal-button:hover {
+[data-component=user-connection] .modal-button:hover {
   border-color: rgba(255, 255, 255, 0.2);
   background: rgba(255, 255, 255, 0.8);
 }
-[data-component=sign-up] .modal-right {
+[data-component=user-connection] .modal-right {
   flex: 2;
   font-size: 0;
   transition: 0.3s;
   overflow: hidden;
 }
-[data-component=sign-up] .modal-right img {
+[data-component=user-connection] .modal-right img {
   width: 100%;
   height: 100%;
-  transform: scale(2);
-  object-fit: cover;
-  transition-duration: 1.2s;
-}
-[data-component=sign-up] .modal.is-open {
-  height: 100%;
-  background: rgba(51, 51, 51, 0.85);
-}
-[data-component=sign-up] .modal.is-open .modal-button {
-  opacity: 0;
-}
-[data-component=sign-up] .modal.is-open .modal-container {
-  opacity: 1;
-  transition-duration: 0.6s;
-  pointer-events: auto;
-  transform: translateY(0) scale(1);
-}
-[data-component=sign-up] .modal.is-open .modal-right img {
   transform: scale(1);
+  object-fit: cover;
 }
-[data-component=sign-up] .modal.is-open .modal-left {
-  transform: translateY(0);
-  opacity: 1;
-  transition-delay: 0.1s;
-}
-[data-component=sign-up] .modal-buttons {
+[data-component=user-connection] .modal-buttons {
+  margin-top: 30px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-[data-component=sign-up] .modal-buttons a {
-  color: rgba(51, 51, 51, 0.6);
-  font-size: 14px;
-}
-[data-component=sign-up] .sign-up {
+[data-component=user-connection] .user-connection {
   margin: 60px 0 0;
   font-size: 14px;
   text-align: center;
 }
-[data-component=sign-up] .sign-up a {
+[data-component=user-connection] .user-connection a {
   color: #8c7569;
 }
-[data-component=sign-up] .input-button {
-  padding: 8px 12px;
-  outline: none;
-  border: 0;
-  color: #fff;
-  border-radius: 4px;
-  background: #8c7569;
-  font-family: "Nunito", sans-serif;
-  transition: 0.3s;
-  cursor: pointer;
-}
-[data-component=sign-up] .input-button:hover {
-  background: #55311c;
-}
-[data-component=sign-up] .input-label {
-  font-size: 11px;
-  text-transform: uppercase;
-  font-family: "Nunito", sans-serif;
-  font-weight: 600;
-  letter-spacing: 0.7px;
-  color: #8c7569;
-  transition: 0.3s;
-}
-[data-component=sign-up] .input-block {
-  display: flex;
-  flex-direction: column;
-  padding: 10px 10px 8px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  margin-bottom: 20px;
-  transition: 0.3s;
-}
-[data-component=sign-up] .input-block input {
-  outline: 0;
-  border: 0;
-  padding: 4px 0 0;
-  font-size: 14px;
-  font-family: "Nunito", sans-serif;
-}
-[data-component=sign-up] .input-block input::placeholder {
-  color: #ccc;
-  opacity: 1;
-}
-[data-component=sign-up] .input-block:focus-within {
-  border-color: #8c7569;
-}
-[data-component=sign-up] .input-block:focus-within .input-label {
-  color: rgba(140, 117, 105, 0.8);
-}
-[data-component=sign-up] .icon-button {
+[data-component=user-connection] .icon-button {
   outline: 0;
   position: absolute;
   right: 10px;
@@ -12099,29 +12028,11 @@ textarea.form-control-lg {
   padding: 0;
   cursor: pointer;
 }
-[data-component=sign-up] .scroll-down {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  color: #7d695e;
-  font-size: 32px;
-  font-weight: 800;
-  transform: translate(-50%, -50%);
-}
-[data-component=sign-up] .scroll-down svg {
-  margin-top: 16px;
-  width: 52px;
-  fill: currentColor;
-}
 @media (max-width: 750px) {
-  [data-component=sign-up] .modal-container {
+  [data-component=user-connection] .modal-container {
     width: 90%;
   }
-  [data-component=sign-up] .modal-right {
+  [data-component=user-connection] .modal-right {
     display: none;
   }
 }
